Fix 4px gap on lede image (inline vs block)

--- a/theme/patdavid/static/css/darktable.css
+++ b/theme/patdavid/static/css/darktable.css
@@ -55,6 +55,7 @@ body {
 
 .lede-img {
     max-width: 100%;
+    display: block;
 }
 
 /* Headings, 1.25:1 ratio
